Implementades les pretty urls al main i a users, funcionant ja el dropzone muntant i borrant fitxers

--- a/view/css/bootstrap.css
+++ b/view/css/bootstrap.css
@@ -5824,4 +5824,4 @@ td.visible-print {
     display: none !important;
   }
 }
-/*# sourceMappingURL=bootstrap.css.map */
+# sourceMappingURL=bootstrap.css.map 
